--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Courtney Seiter</title>
+        <meta name="viewport" content="width=device-width">
+
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/css/syntax.css">
+
+        <!-- Custom CSS -->
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="/assets/main-e420a802e423abd6baa3840277c44c82.css">
+
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
+        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
+        <meta name="msapplication-square70x70logo" content="/mstile-70x70.png" />
+        <meta name="msapplication-square150x150logo" content="/mstile-150x150.png" />
+        <meta name="msapplication-wide310x150logo" content="/mstile-310x150.png" />
+        <meta name="msapplication-square310x310logo" content="/mstile-310x310.png" />
+
+    </head>
+    <body>
+
+        <div class="site">
+<!--           <div class="header">
+            <h1 class="title"><a href="/">Courtney Seiter</a></h1>
+            <a class="extra" href="/">home</a>
+          </div> -->
+
+          <header>
+  <section class="hero">
+    
+    <div class="blurb">
+      <h1>Courtney Seiter</h1>
+      <h2 class="tagline">
+        <span>Communicator.</span>
+        <span>Connector.</span>
+        <span>And a bit of a cheerleader.</span>
+      </h2>
+    </div>  
+    <div class="headshot">
+      <img src="/assets/headshot-1ecba70339f2f883358b289c26ab8551.jpg" />
+    </div>
+  </section>
+</header>
+
+<div class="content">
+  <section class="content-block content-block__intro">
+    <p class="lead">
+      Hey! I'm Courtney Seiter – a writer, <a href="">editor</a>, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
+    </p>
+  </section>
+  <section class="content-block content-block__writing">
+
+    <aside class="pull-quote">
+      <div class="pull-quote__image">
+        <img src="/assets/falls-106f355fd9cc717aed42ddee5b4639b4.jpg" />
+      </div>
+      <div class="pull-quote__quote">
+        <blockquote>
+          <p>Courtney is a top-notch community manager and it-getter in the social space.</p>
+        </blockquote>
+        <small><a href="http://www.jasonfalls.com/">Jason Falls</a></small>
+      </div>
+    </aside>
+
+    <h1><i class="fa fa-pencil"></i> Writing</h1>
+    <p>
+      I write a lot about social media, content marketing and search engine optimization, but I really like focusing on topics like empathy and how technology can make us better people. Here's where you can see some of my work:
+    </p>
+    <ul class="nav">
+      <li><i class="fa fa-pencil fa-fw"></i> On the Raven Tools blog</li>
+      <li><i class="fa fa-pencil fa-fw"></i> My column at Marketing Land</li>
+      <li><i class="fa fa-pencil fa-fw"></i> At Social Media Club</li>
+    </ul>
+
+  </section>
+  <section class="content-block">
+    <div class="content-block__details">
+      <aside class="pull-quote pull-quote__right">
+        <div class="pull-quote__image">
+          <img src="/assets/wright-219bc6fbde916910d25f116c9ab19977.png" />
+        </div>
+        <div class="pull-quote__quote">
+          <blockquote>
+            <p>She has an appealing voice in her writing - it is authentic, smart, creative &hellip; Her articles on social media and search marketing are heavily shared, and she is considered a trusted source as successful digital marketer. She is fantastic person to work with</p>
+          </blockquote>
+          <small><a href="http://www.jasonfalls.com/">Monica Wright, Marketing Land</a></small>
+        </div>
+      </aside>
+      <div class="content-block__writing">
+        <h1><i class="fa fa-microphone"></i> Speaking</h1>
+        <p>
+          I love sharing what I've learned with others, and I've been lucky enough to speak at events both local and national, including SMX Social, Explore Social Media, Interactivity Digital, Barcamp Nashville, Search Exchange and more. See some of my talks here:
+        </p>
+        <ul class="nav">
+          <li><i class="fa fa-microphone fa-fw"></i> Social Media And the Art of Being Interested</li>
+          <li><i class="fa fa-microphone fa-fw"></i> A Tweet is Worth What? A Guide to Measuring Social Media</li>
+          <li><i class="fa fa-microphone fa-fw"></i> Break the Rules of Social Media</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="content-block">
+    <div class="content-block__details">
+      <aside class="pull-quote">
+        <div class="pull-quote__image">
+          <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
+        </div>
+        <div class="pull-quote__quote">
+          <blockquote>
+            <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
+          </blockquote>
+          <small><a href="http://www.jasonfalls.com/">Laura Stevenson Obrohta, Mothers Digital</a></small>
+        </div>
+      </aside>
+      <div class="content-block__writing">
+        <h1><i class="fa fa-dashboard"></i> Tools</h1>
+        <p>
+          I'm always on the lookout for tools that make happier and more productive. Here are some my favorites.
+        </p>
+        <ul class="nav">
+          <li><i class="fa fa-wrench fa-fw"></i> Raven Tools: I'm a little biased since I'm Raven's community manager, but this platform is a giant resource of SEO, social media, research and content tools.</li>
+          <li><i class="fa fa-wrench fa-fw"></i> Buffer: The easiest and most delightful way to curate and share great content on social media channels.</li>
+          <li><i class="fa fa-wrench fa-fw"></i> Songza: Good work needs a great soundtrack, and Songza has the perfect mix of songs for any whim, mood or activity – curated by savvy tastemakers.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="content-block">
+    <div class="content-block__details">
+      <aside class="pull-quote pull-quote__right">
+        <div class="pull-quote__image">
+          <img src="/assets/fishkin-fc6106f5bd911def09a8ad8792fb45cb.jpg" />
+        </div>
+        <div class="pull-quote__quote">
+          <blockquote>
+            <p>Man, she is amazing.</p>
+          </blockquote>
+          <small><a href="http://www.jasonfalls.com/">Rand Fishkin</a></small>
+        </div>
+      </aside>
+      <div class="content-block__writing">
+        <h1><i class="fa fa-dashboard"></i> Trivia</h1>
+        <p>
+          An odd assortment of thing to know about me:
+        </p>
+        <ul class="nav">
+          <li><i class="fa fa-info-circle fa-fw"></i> I once worked in the editorial department at Playboy.</li>
+          <li><i class="fa fa-info-circle fa-fw"></i> I can count to 12 in Danish.</li>
+          <li><i class="fa fa-info-circle fa-fw"></i> I will make a playlist for any occasion.</li>
+        </ul>
+      </div>
+  </section>
+  <section class="content-block">
+    <div class="content-block__details">
+      <div class="content-block__writing">
+      <a class="twitter-timeline" height="300" width="600" href="https://twitter.com/RavenCourtney" data-widget-id="399269902902521859" data-chrome="noheader noborders noscrollbar transparent">Tweets by @RavenCourtney</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </div>
+  </section>
+</div>
+
+
+<!--           <div class="footer">
+            <div class="contact">
+              <p>
+                Your Name<br />
+                What You Are<br />
+                you@example.com
+              </p>
+            </div>
+            <div class="contact">
+              <p>
+                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
+                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+              </p>
+            </div>
+          </div>
+        </div> -->
+
+    </body>
+</html>
