--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="content">
   <section class="content-block content-block__intro">
     <p class="lead">
-      Hey! I'm Courtney Seiter – a writer, <a href="">editor</a>, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
+      Hey! I'm Courtney Seiter – a writer, <a href="http://www.webpagefx.com/blog/internet/10-lessons-from-editing-the-raven-tools-blog/" target="_blank" title="editor">editor</a>, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
     </p>
   </section>
   <section class="content-block content-block__writing">
@@ -74,18 +74,18 @@
         <blockquote>
           <p>Courtney is a top-notch community manager and it-getter in the social space.</p>
         </blockquote>
-        <small><a href="http://www.jasonfalls.com/">Jason Falls</a></small>
+        <small><a href="http://www.jasonfalls.com/" title="Jason Falls" target="_blank">Jason Falls</a></small>
       </div>
     </aside>
 
     <h1><i class="fa fa-pencil"></i> Writing</h1>
     <p>
-      I write a lot about social media, content marketing and search engine optimization, but I really like focusing on topics like empathy and how technology can make us better people. Here's where you can see some of my work:
+      I write a lot about <a href="http://raventools.com/resources/whitepapers/social-media-metrics/" title="social media" target="_blank">social media</a>, content marketing and search engine optimization, but I really like focusing on topics like <a href="http://raventools.com/blog/social-media-in-a-tragedy-be-helpful-be-kind-or-be-quiet/" title="empathy" target="_blank">empathy</a> and how <a href="http://raventools.com/blog/social-media-and-the-art-of-being-interested/" title="technology can make us better people" target="_blank">technology can make us better people</a>. Here's where you can see some of my work:
     </p>
     <ul class="nav">
-      <li><i class="fa fa-pencil fa-fw"></i> On the Raven Tools blog</li>
-      <li><i class="fa fa-pencil fa-fw"></i> My column at Marketing Land</li>
-      <li><i class="fa fa-pencil fa-fw"></i> At Social Media Club</li>
+      <li><i class="fa fa-pencil fa-fw"></i> On the <a href="http://raventools.com/blog/author/courtneyseiter/" titl="Raven Tools blog" target="_blank">Raven Tools blog</a></li>
+      <li><i class="fa fa-pencil fa-fw"></i> My column at <a href="http://marketingland.com/author/courtney-seiter" title="Marketing Land" target="_blank">Marketing Land</a></li>
+      <li><i class="fa fa-pencil fa-fw"></i> At <a href="http://socialmediaclub.org/profile/courtneyseiter" title="Social Media Club" target="_blank">Social Media Club</a></li>
     </ul>
 
   </section>
@@ -99,18 +99,18 @@
           <blockquote>
             <p>She has an appealing voice in her writing - it is authentic, smart, creative &hellip; Her articles on social media and search marketing are heavily shared, and she is considered a trusted source as successful digital marketer. She is fantastic person to work with</p>
           </blockquote>
-          <small><a href="http://www.jasonfalls.com/">Monica Wright, Marketing Land</a></small>
+          <small><a href="http://marketingland.com/author/monica-wright" title="Monica Wright, Marketing Land" target="_blank">Monica Wright, Marketing Land</a></small>
         </div>
       </aside>
       <div class="content-block__writing">
         <h1><i class="fa fa-microphone"></i> Speaking</h1>
         <p>
-          I love sharing what I've learned with others, and I've been lucky enough to speak at events both local and national, including SMX Social, Explore Social Media, Interactivity Digital, Barcamp Nashville, Search Exchange and more. See some of my talks here:
+          I love sharing what I've learned with others, and I've been lucky enough to speak at events both local and national, including <a href="http://searchmarketingexpo.com/socialmediamarketing" title="SMX Social" target="_blank">SMX Social</a>, <a href="http://www.socialmediaexplorer.com/" title="Explore Social Media" target="_blank">Explore Social Media</a>, <a href="http://www.interactivitydigital.com/events/" title="Interactivity Digital" target="_blank">Interactivity Digital</a>, <a href="http://www.barcampnashville.org/bcn13/" title="Barcamp Nashville" target="_blank">Barcamp Nashville</a>, <a href="http://searchexchange.org/" title="Search Exchange" target="_blank">Search Exchange</a> and more. See some of my talks here:
         </p>
         <ul class="nav">
-          <li><i class="fa fa-microphone fa-fw"></i> Social Media And the Art of Being Interested</li>
-          <li><i class="fa fa-microphone fa-fw"></i> A Tweet is Worth What? A Guide to Measuring Social Media</li>
-          <li><i class="fa fa-microphone fa-fw"></i> Break the Rules of Social Media</li>
+          <li><i class="fa fa-microphone fa-fw"></i> <a href="http://www.slideshare.net/raventools/social-media-and-the-art-of-being-interested" title="Social Media And the Art of Being Interested" target="_blank">Social Media And the Art of Being Interested</a></li>
+          <li><i class="fa fa-microphone fa-fw"></i> <a href="http://youtu.be/QcEjHGSQ8aI" title="A Tweet is Worth What? A Guide to Measuring Social Media" target="_blank">A Tweet is Worth What? A Guide to Measuring Social Media</a></li>
+          <li><i class="fa fa-microphone fa-fw"></i> <a href="http://www.slideshare.net/raventools/break-the-rules-of-social-media-12518662" title="Break the Rules of Social Media" target="_blank">Break the Rules of Social Media</li>
         </ul>
       </div>
     </div>
@@ -125,18 +125,18 @@
           <blockquote>
             <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
           </blockquote>
-          <small><a href="http://www.jasonfalls.com/">Laura Stevenson Obrohta, Mothers Digital</a></small>
+          <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
         </div>
       </aside>
       <div class="content-block__writing">
         <h1><i class="fa fa-dashboard"></i> Tools</h1>
         <p>
-          I'm always on the lookout for tools that make happier and more productive. Here are some my favorites.
+          I'm always on the lookout for tools that make happier and <a href="http://raventools.com/blog/12-shortcut-tools-for-lazy-community-management/" title="more productive">more productive</a>. Here are some my favorites.
         </p>
         <ul class="nav">
-          <li><i class="fa fa-wrench fa-fw"></i> Raven Tools: I'm a little biased since I'm Raven's community manager, but this platform is a giant resource of SEO, social media, research and content tools.</li>
-          <li><i class="fa fa-wrench fa-fw"></i> Buffer: The easiest and most delightful way to curate and share great content on social media channels.</li>
-          <li><i class="fa fa-wrench fa-fw"></i> Songza: Good work needs a great soundtrack, and Songza has the perfect mix of songs for any whim, mood or activity – curated by savvy tastemakers.</li>
+          <li><i class="fa fa-wrench fa-fw"></i> <a href="http://raventools.com/" title="Raven Tools" target="_blank"><strong>Raven Tools</strong></a>: I'm a little biased since I'm Raven's community manager, but this platform is a giant resource of SEO, social media, research and content tools.</li>
+          <li><i class="fa fa-wrench fa-fw"></i> <a href="https://bufferapp.com/" title="Buffer" target="_blank"><strong>Buffer</strong></a>: The easiest and most delightful way to curate and share great content on social media channels.</li>
+          <li><i class="fa fa-wrench fa-fw"></i> <a href="http://songza.com/" title="Songza" target="_blank"><strong>Songza</strong></a>: Good work needs a great soundtrack, and Songza has the perfect mix of songs for any whim, mood or activity – curated by savvy tastemakers.</li>
         </ul>
       </div>
     </div>
@@ -151,7 +151,7 @@
           <blockquote>
             <p>Man, she is amazing.</p>
           </blockquote>
-          <small><a href="http://www.jasonfalls.com/">Rand Fishkin</a></small>
+          <small><a href="http://moz.com/rand/" title="Rand Fishkin" target="_blank">Rand Fishkin</a></small>
         </div>
       </aside>
       <div class="content-block__writing">
@@ -160,7 +160,7 @@
           An odd assortment of thing to know about me:
         </p>
         <ul class="nav">
-          <li><i class="fa fa-info-circle fa-fw"></i> I once worked in the editorial department at Playboy.</li>
+          <li><i class="fa fa-info-circle fa-fw"></i> I once worked in the editorial department <a href="http://www.interactivitydigital.com/q-community-manager-raven/" title="Playboy" target="_blank">at Playboy</a>.</li>
           <li><i class="fa fa-info-circle fa-fw"></i> I can count to 12 in Danish.</li>
           <li><i class="fa fa-info-circle fa-fw"></i> I will make a playlist for any occasion.</li>
         </ul>
