--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/main-e420a802e423abd6baa3840277c44c82.css">
+        <link rel="stylesheet" href="/assets/main-0468177ebbafc16752e17080616ba9af.css">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
@@ -36,10 +36,6 @@
     <body>
 
         <div class="site">
-<!--           <div class="header">
-            <h1 class="title"><a href="/">Courtney Seiter</a></h1>
-            <a class="extra" href="/">home</a>
-          </div> -->
 
           <header>
   <section class="hero">
@@ -176,22 +172,9 @@
 </div>
 
 
-<!--           <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
-        </div> -->
+          <footer>
+            
+          </footer>
 
     </body>
 </html>
