--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/main-e8a438d4c86ba2b3ec403f0582187369.css">
+        <link rel="stylesheet" href="/assets/main-0266bd7752a72880c378dfa79a261ad7.css">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
@@ -160,6 +160,18 @@
       </ul>
 
   </section>
+
+  <aside class="inline-quote">
+    <div class="inline-quote__image">
+      <img src="/assets/fishkin-fc6106f5bd911def09a8ad8792fb45cb.jpg" />
+    </div>
+    <div class="inline-quote__quote">
+      <blockquote>
+        <p>Man, she is amazing.</p>
+      </blockquote>
+      <small><a href="http://moz.com/rand/" title="Rand Fishkin" target="_blank">Rand Fishkin</a></small>
+    </div>
+  </aside>
 
 </div>
 
