Add more mobile updates.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/main-0266bd7752a72880c378dfa79a261ad7.css">
+        <link rel="stylesheet" href="/assets/main-df6310ad435f62145fc85e00fb56425a.css">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
@@ -38,26 +38,26 @@
         <div class="site">
 
           <header>
-  <section class="hero">
-    
-    <div class="blurb">
-      <h1>Courtney Seiter</h1>
-      <h2 class="tagline">
-        <span>Communicator.</span>
-        <span>Connector.</span>
-        <span>And a bit of a cheerleader.</span>
-      </h2>
-    </div>  
-    <div class="headshot">
-      <img src="/assets/headshot-1ecba70339f2f883358b289c26ab8551.jpg" />
-    </div>
-  </section>
-</header>
+            <section class="hero">
+              
+              <div class="blurb">
+                <h1>Courtney Seiter</h1>
+                <h2 class="tagline">
+                  <span>Communicator.</span>
+                  <span>Connector.</span>
+                  <span>And a bit of a cheerleader.</span>
+                </h2>
+              </div>  
+              <div class="headshot">
+                <img src="/assets/headshot-1ecba70339f2f883358b289c26ab8551.jpg" />
+              </div>
+            </section>
+          </header>
 
-<div class="content">
+          <div class="content">
   <section class="content-block content-block__intro">
     <p class="lead">
-      Hey! I'm Courtney Seiter – a writer, <a href="http://www.webpagefx.com/blog/internet/10-lessons-from-editing-the-raven-tools-blog/" target="_blank" title="editor">editor</a>, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
+      Hey! I'm Courtney Seiter – a writer, <!-- <a href="http://www.webpagefx.com/blog/internet/10-lessons-from-editing-the-raven-tools-blog/" target="_blank" title="editor"> -->editor, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
     </p>
   </section>
   <section class="content-block content-block__writing">
@@ -85,6 +85,21 @@
     </ul>
 
   </section>
+
+
+  <aside class="inline-quote">
+    <div class="inline-quote__image">
+      <img src="/assets/falls-106f355fd9cc717aed42ddee5b4639b4.jpg" />
+    </div>
+    <div class="inline-quote__quote">
+      <blockquote>
+        <p>Courtney is a top-notch community manager and it-getter in the social space.</p>
+      </blockquote>
+      <small><a href="http://www.jasonfalls.com/" title="Jason Falls" target="_blank">Jason Falls</a></small>
+    </div>
+  </aside>
+
+
   <section class="content-block content-block__speaking">
 
     <aside class="pull-quote pull-quote__right">
@@ -93,7 +108,7 @@
       </div>
       <div class="pull-quote__quote">
         <blockquote>
-          <p>She has an appealing voice in her writing - it is authentic, smart, creative &hellip; Her articles on social media and search marketing are heavily shared, and she is considered a trusted source as successful digital marketer. She is fantastic person to work with</p>
+          <p>She has an appealing voice in her writing - it is authentic, smart, creative &hellip; Her articles on social media and search marketing are heavily shared, and she is considered a trusted source as successful digital marketer. She is a fantastic person to work with.</p>
         </blockquote>
         <small><a href="http://marketingland.com/author/monica-wright" title="Monica Wright, Marketing Land" target="_blank">Monica Wright, Marketing Land</a></small>
       </div>
@@ -110,6 +125,21 @@
     </ul>
 
   </section>
+
+
+  <aside class="inline-quote">
+    <div class="inline-quote__image">
+      <img src="/assets/wright-219bc6fbde916910d25f116c9ab19977.png" />
+    </div>
+    <div class="inline-quote__quote">
+      <blockquote>
+        <p>She has an appealing voice in her writing - it is authentic, smart, creative &hellip; Her articles on social media and search marketing are heavily shared, and she is considered a trusted source as successful digital marketer. She is fantastic person to work with</p>
+      </blockquote>
+      <small><a href="http://marketingland.com/author/monica-wright" title="Monica Wright, Marketing Land" target="_blank">Monica Wright, Marketing Land</a></small>
+    </div>
+  </aside>
+
+
   <section class="content-block content-block__tools">
 
     <aside class="pull-quote">
@@ -135,6 +165,21 @@
     </ul>
 
   </section>
+
+
+  <aside class="inline-quote">
+    <div class="inline-quote__image">
+      <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
+    </div>
+    <div class="inline-quote__quote">
+      <blockquote>
+        <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
+      </blockquote>
+      <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
+    </div>
+  </aside>
+
+
   <section class="content-block content-block__trivia">
 
       <aside class="pull-quote pull-quote__right">
