Update layout order and add social links.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/main-649511881808b51cc83e4de5314e7cf5.css">
+        <link rel="stylesheet" href="/assets/main-759e00ec02efc8308eea67ec788dee00.css">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
@@ -79,9 +79,9 @@
       I write a lot about <a href="http://raventools.com/resources/whitepapers/social-media-metrics/" title="social media" target="_blank">social media</a>, content marketing and search engine optimization, but I really like focusing on topics like <a href="http://raventools.com/blog/social-media-in-a-tragedy-be-helpful-be-kind-or-be-quiet/" title="empathy" target="_blank">empathy</a> and how <a href="http://raventools.com/blog/social-media-and-the-art-of-being-interested/" title="technology can make us better people" target="_blank">technology can make us better people</a>. Here's where you can see some of my work:
     </p>
     <ul class="nav">
-      <li><i class="fa fa-pencil fa-fw"></i> On the <a href="http://raventools.com/blog/author/courtneyseiter/" titl="Raven Tools blog" target="_blank">Raven Tools blog</a></li>
-      <li><i class="fa fa-pencil fa-fw"></i> My column at <a href="http://marketingland.com/author/courtney-seiter" title="Marketing Land" target="_blank">Marketing Land</a></li>
-      <li><i class="fa fa-pencil fa-fw"></i> At <a href="http://socialmediaclub.org/profile/courtneyseiter" title="Social Media Club" target="_blank">Social Media Club</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> On the <a href="http://raventools.com/blog/author/courtneyseiter/" titl="Raven Tools blog" target="_blank">Raven Tools blog</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> My column at <a href="http://marketingland.com/author/courtney-seiter" title="Marketing Land" target="_blank">Marketing Land</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> At <a href="http://socialmediaclub.org/profile/courtneyseiter" title="Social Media Club" target="_blank">Social Media Club</a></li>
     </ul>
 
   </section>
@@ -119,9 +119,9 @@
       I love sharing what I've learned with others, and I've been lucky enough to speak at events both local and national, including <a href="http://searchmarketingexpo.com/socialmediamarketing" title="SMX Social" target="_blank">SMX Social</a>, <a href="http://www.socialmediaexplorer.com/" title="Explore Social Media" target="_blank">Explore Social Media</a>, <a href="http://www.interactivitydigital.com/events/" title="Interactivity Digital" target="_blank">Interactivity Digital</a>, <a href="http://www.barcampnashville.org/bcn13/" title="Barcamp Nashville" target="_blank">Barcamp Nashville</a>, <a href="http://searchexchange.org/" title="Search Exchange" target="_blank">Search Exchange</a> and more. See some of my talks here:
     </p>
     <ul class="nav">
-      <li><i class="fa fa-microphone fa-fw"></i> <a href="http://www.slideshare.net/raventools/social-media-and-the-art-of-being-interested" title="Social Media And the Art of Being Interested" target="_blank">Social Media And the Art of Being Interested</a></li>
-      <li><i class="fa fa-microphone fa-fw"></i> <a href="http://youtu.be/QcEjHGSQ8aI" title="A Tweet is Worth What? A Guide to Measuring Social Media" target="_blank">A Tweet is Worth What? A Guide to Measuring Social Media</a></li>
-      <li><i class="fa fa-microphone fa-fw"></i> <a href="http://www.slideshare.net/raventools/break-the-rules-of-social-media-12518662" title="Break the Rules of Social Media" target="_blank">Break the Rules of Social Media</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://www.slideshare.net/raventools/social-media-and-the-art-of-being-interested" title="Social Media And the Art of Being Interested" target="_blank">Social Media And the Art of Being Interested</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://youtu.be/QcEjHGSQ8aI" title="A Tweet is Worth What? A Guide to Measuring Social Media" target="_blank">A Tweet is Worth What? A Guide to Measuring Social Media</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://www.slideshare.net/raventools/break-the-rules-of-social-media-12518662" title="Break the Rules of Social Media" target="_blank">Break the Rules of Social Media</a></li>
     </ul>
 
   </section>
@@ -144,13 +144,13 @@
 
     <aside class="pull-quote">
       <div class="pull-quote__image">
-        <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
+        <img src="/assets/fishkin-fc6106f5bd911def09a8ad8792fb45cb.jpg" />
       </div>
       <div class="pull-quote__quote">
         <blockquote>
-          <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
+          <p>Man, she is amazing.</p>
         </blockquote>
-        <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
+        <small><a href="http://moz.com/rand/" title="Rand Fishkin" target="_blank">Rand Fishkin</a></small>
       </div>
     </aside>
 
@@ -159,52 +159,13 @@
       I'm always on the lookout for tools that make happier and <a href="http://raventools.com/blog/12-shortcut-tools-for-lazy-community-management/" title="more productive">more productive</a>. Here are some my favorites.
     </p>
     <ul class="nav">
-      <li><i class="fa fa-wrench fa-fw"></i> <a href="http://raventools.com/" title="Raven Tools" target="_blank"><strong>Raven Tools</strong></a>: I'm a little biased since I'm Raven's community manager, but this platform is a giant resource of SEO, social media, research and content tools.</li>
-      <li><i class="fa fa-wrench fa-fw"></i> <a href="https://bufferapp.com/" title="Buffer" target="_blank"><strong>Buffer</strong></a>: The easiest and most delightful way to curate and share great content on social media channels.</li>
-      <li><i class="fa fa-wrench fa-fw"></i> <a href="http://songza.com/" title="Songza" target="_blank"><strong>Songza</strong></a>: Good work needs a great soundtrack, and Songza has the perfect mix of songs for any whim, mood or activity – curated by savvy tastemakers.</li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://raventools.com/" title="Raven Tools" target="_blank"><strong>Raven Tools</strong></a>: I'm a little biased since I'm Raven's community manager, but this platform is a giant resource of SEO, social media, research and content tools.</li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="https://bufferapp.com/" title="Buffer" target="_blank"><strong>Buffer</strong></a>: The easiest and most delightful way to curate and share great content on social media channels.</li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://songza.com/" title="Songza" target="_blank"><strong>Songza</strong></a>: Good work needs a great soundtrack, and Songza has the perfect mix of songs for any whim, mood or activity – curated by savvy tastemakers.</li>
     </ul>
 
   </section>
 
-
-  <aside class="inline-quote">
-    <div class="inline-quote__image">
-      <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
-    </div>
-    <div class="inline-quote__quote">
-      <blockquote>
-        <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
-      </blockquote>
-      <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
-    </div>
-  </aside>
-
-
-  <section class="content-block content-block__trivia">
-
-      <aside class="pull-quote pull-quote__right">
-        <div class="pull-quote__image">
-          <img src="/assets/fishkin-fc6106f5bd911def09a8ad8792fb45cb.jpg" />
-        </div>
-        <div class="pull-quote__quote">
-          <blockquote>
-            <p>Man, she is amazing.</p>
-          </blockquote>
-          <small><a href="http://moz.com/rand/" title="Rand Fishkin" target="_blank">Rand Fishkin</a></small>
-        </div>
-      </aside>
-
-      <h1><i class="fa fa-dashboard"></i> Trivia</h1>
-      <p>
-        An odd assortment of thing to know about me:
-      </p>
-      <ul class="nav">
-        <li><i class="fa fa-info-circle fa-fw"></i> I once worked in the editorial department <a href="http://www.interactivitydigital.com/q-community-manager-raven/" title="Playboy" target="_blank">at Playboy</a>.</li>
-        <li><i class="fa fa-info-circle fa-fw"></i> I can count to 12 in Danish.</li>
-        <li><i class="fa fa-info-circle fa-fw"></i> I will make a playlist for any occasion.</li>
-      </ul>
-
-  </section>
 
   <aside class="inline-quote">
     <div class="inline-quote__image">
@@ -218,12 +179,56 @@
     </div>
   </aside>
 
+
+  <section class="content-block content-block__trivia">
+
+      <aside class="pull-quote pull-quote__right">
+        <div class="pull-quote__image">
+          <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
+        </div>
+        <div class="pull-quote__quote">
+          <blockquote>
+            <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
+          </blockquote>
+          <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson, Mothers Digital</a></small>
+        </div>
+      </aside>
+
+      <h1><i class="fa fa-dashboard"></i> Trivia</h1>
+      <p>
+        An odd assortment of things to know about me:
+      </p>
+      <ul class="nav">
+        <li><i class="fa fa-circle-o fa-fw"></i> I once worked in the editorial department <a href="http://www.interactivitydigital.com/q-community-manager-raven/" title="Playboy" target="_blank">at Playboy</a>.</li>
+        <li><i class="fa fa-circle-o fa-fw"></i> I can count to 12 in Danish.</li>
+        <li><i class="fa fa-circle-o fa-fw"></i> I will make a playlist for any occasion.</li>
+      </ul>
+
+  </section>
+
+  <aside class="inline-quote">
+    <div class="inline-quote__image">
+      <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
+    </div>
+    <div class="inline-quote__quote">
+      <blockquote>
+        <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
+      </blockquote>
+      <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson, Mothers Digital</a></small>
+    </div>
+  </aside>
+
 </div>
 
 
           <footer>
             <section class="contact">
-              <h1><a href="http://twitter.com/courtneyseiter" title="Courtney on Twitter" target="_blank"><i class="fa fa-twitter-square"></i><br />courtneyseiter</a></h1>
+              <h1>
+                Courtney Seiter
+              </h1>
+              <p>  
+                <a href="http://twitter.com/courtneyseiter" title="Courtney on Twitter" target="_blank"><i class="fa fa-twitter-square"></i></a><a href="http://plus.google.com/+CourtneySeiter/" title="Courtney on Google+" target="_blank"><i class="fa fa-google-plus-square"></i></a><a href="http://linkedin.com/in/courtneyseiter" title="Courtney on LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a><a href="http://www.facebook.com/courtneyseiter" title="Courtney on Facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
+              </p>
             </section>
           </footer>
 
